# axis

./: .gitignore  README.md  init_repo.sh  pyproject.toml  queries.txt  test.py
data/: config.json
data/igp2/configs/: scenario0.json  scenario1.json  scenario10.json  scenario11.json  scenario2.json  scenario3.json  scenario4.json  scenario5.json  scenario6.json  scenario7.json  scenario8.json  scenario9.json
data/igp2/evaluation/: goals_actions.json
data/igp2/evaluation/actionable/: exp_prompt.txt  no_exp_prompt.txt  system.txt
data/igp2/evaluation/correct/: exp_prompt.txt  no_exp_prompt.txt  prompt.txt  system.txt
data/igp2/evaluation/fluent/: prompt.txt
data/igp2/prompts/: context.txt  explanation.txt  final.txt  interrogation.txt  no_context.txt  nosim_context.txt  nosim_final.txt  nosim_system.txt  occlusions.txt  query.txt  system.txt
implementations/: __init__.py
implementations/axs_igp2/: macroaction.py  util.py  verbalizer.py
scripts/: init_repo.sh  ping_vllm.sh  prompt_vllm.sh  test.py
scripts/bash/: evaluate_all.sh  generate_all.sh  init_repo.sh  release.sh  run_all.sh  run_eidf.sh
scripts/python/: __init__.py  analysis.py  baselines.py  evaluate.py  experiment.py  feature_selection.py  features_testing.py  generate.py  llm-configs.json  llm_configs.json  plot.py  score.py  summary.py  test-prompt-only.py  test.py  util.py  validation.py
src/: __about__.py
src/axs/: __init__.py  __main__.py  agent.py  config.py  llm.py  macro_action.py  macroaction.py  memory.py  policy.py  prompt.py  query.py  simulator.py  util.py  verbalize.py  wrapper.py
src/axs/macroaction/: __init__.py  base.py
src/envs/: __init__.py
src/envs/axs_igp2/: __init__.py  __main__.py  macroaction.py  policy.py  query.py  util.py  verbalize.py  verbalizer.py  wrapper.py
