[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__about__.py"

[project]
name = "axs"
dynamic = ["version"]
description = "Generating agentic explanations for multi-agent systems with simulator grounding"
readme = "README.md"
authors = [{ name = "Balint Gyevnar", email = "balint.gyevnar@ed.ac.uk" }]
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.1.1",
    "huggingface-hub>=0.29.3",
    "openai>=1.66.3",
    "pettingzoo>=1.24.3",
    "setuptools>=76.1.0",
    "typer>=0.15.2",
    "vllm>=0.7.3",
]
keywords = [
    "Explainable Agent",
    "Reinforcement Learning",
    "Explainable AI",
    "Agentic System",
    "LLM",
    "Simulator",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "MIT"

[project.scripts]
axs = "axs:cli"
axs-igp2 = "envs.axs_igp2:cli"

[project.optional-dependencies]
igp2 = ["igp2", "gofi"]

[dependency-groups]
dev = ["bitsandbytes>=0.45.3", "minigrid>=3.0.0", "hatch>=1.14.0"]

[tool.uv.sources]
gofi = { git = "https://github.com/gyevnarb/gofi" }
igp2 = { git = "https://github.com/uoe-agents/IGP2" }

[tool.ruff]
select = ["ALL"]
ignore = [
    "S301",
    "ANN401",
    "ERA001",
    "PLR0912",
    "C901",
    "ARG002",
    "SLF001",
    "FBT002",
    "FBT001",
]
